# SwitchSources

./: README.md  config.json  pyproject.toml
.github/workflows/: python-publish.yml
src/switchsources/: app.py  config.py  switcher.py
