[tool.poetry]
name = "switchsources"
version = "0.1.0"
description = "A tool to switch sources"
authors = ["Dragonchu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.plugins."scripts"]
switchsources = "switchsources.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
